--- a/app/views/transactionInfos.html
+++ b/app/views/transactionInfos.html
@@ -22,7 +22,7 @@
                     <a href="./#/address/{{to}}">{{to}}</a>
                     <span class="pull-right">
                     </span>
-                        <span>{{ethValue}} DM</span>
+                        <span>{{dmValue}} DM</span>
                     <br>
                 </td>
             </tr>
@@ -30,7 +30,7 @@
         </table>
         <div style="padding-bottom:30px;width:100%;text-align:right;clear:both">   <!--TODO no style tags...-->
             <button class="btn btn-primary">{{conf}} Confirmations</button>
-            <button class="btn btn-success cb"><span>{{ethValue}} DM</span></button>
+            <button class="btn btn-success cb"><span>{{dmValue}} DM</span></button>
         </div>
         <table class="table table-striped">
             <tbody><tr>
